--- a/css/index.css
+++ b/css/index.css
@@ -13,6 +13,15 @@ header, footer{
   clear: both;
 }
 
+.toggle{
+  float: right;
+  margin-top: 11%;
+  margin-right: 1%;
+  font-size: 20px;
+  border-radius: 20px;
+  border: 1px solid black;
+}
+
 .top-row{
   width: 33.33%;
   float: left;
@@ -20,6 +29,14 @@ header, footer{
 .bottom-row{
   width: 50%;
   float: left;
+}
+
+.blue-box{
+  border: 1px solid blue;
+  height: 100px;
+  width: 50%;
+  margin-left: 25%;
+  margin-top: 10%;
 }
 
 @media (max-width: 700px) {
